samples/_failures_safe/1761720692_34c6b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42ca79b5.c: In function ‘main’:
./samples/SAFE/__tmp_42ca79b5.c:154: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_42ca79b5.c:153:5: error: expected declaration or statement at end of input
  153 |     if
      |     ^~
